Konwell, Terr, Leslinpar, Estallen ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3224,27 +3224,6 @@
  W23_idea_7_3:0 "Respected At Last"
  W23_idea_7_3_desc:0 "Exelaire 7 desc" 
 
-
-  ##### ESMARIA #####
-
- Z46_ideas_3:0 "Esmari Ideas 3"
- Z46_ideas_3_start:0 "Esmari Traditions 3"
- Z46_ideas_3_bonus:0 "Esmari Ambition 3"
- Z46_idea_1_3:0 "Warring Nobles"
- Z46_idea_1_3_desc:0 "Esmari 1 desc"
- Z46_idea_2_3:0 "Finest Footmen Forever Found"
- Z46_idea_2_3_desc:0 "Esmari 2 desc"
- Z46_idea_3_3:0 "United at Last"
- Z46_idea_3_3_desc:0 "Esmari 3 desc"
- Z46_idea_4_3:0 "Anben, Anbennar"
- Z46_idea_4_3_desc:0 "Esmari 4 desc"
- Z46_idea_5_3:0 "Coastal Protection Act"
- Z46_idea_5_3_desc:0 "Esmari 5 desc"
- Z46_idea_6_3:0 "Silver Tongues"
- Z46_idea_6_3_desc:0 "Esmari 6 desc"
- Z46_idea_7_3:0 "Council of Esmaria"
- Z46_idea_7_3_desc:0 "Esmari 7 desc" 
-
   ##### GNOMES #####
 
  A81_ideas_1:0 "Giberd Ideas 1"
@@ -3320,9 +3299,9 @@
  A19_idea_7_1:0 "Among Humans, Elves and Halflings"
  A19_idea_7_1_desc:0 "Portnamm 7 desc"
 
- A19_ideas_2:0 "Portnamm Ideas 1"
- A19_ideas_2_start:0 "Portnamm Traditions 1"
- A19_ideas_2_bonus:0 "Portnamm Ambition 1"
+ A19_ideas_2:0 "Portnamm Ideas 2"
+ A19_ideas_2_start:0 "Portnamm Traditions 2"
+ A19_ideas_2_bonus:0 "Portnamm Ambition 2"
  A19_idea_1_2:0 "Sponsor Adventurer Explorers"
  A19_idea_1_2_desc:0 "Portnamm 1 desc"
  A19_idea_2_2:0 "Pioneers Of Artificery"
@@ -3338,9 +3317,9 @@
  A19_idea_7_2:0 "Among Humans, Elves and Halflings"
  A19_idea_7_2_desc:0 "Portnamm 7 desc"
 
- A19_ideas_3:0 "Portnamm Ideas 1"
- A19_ideas_3_start:0 "Portnamm Traditions 1"
- A19_ideas_3_bonus:0 "Portnamm Ambition 1"
+ A19_ideas_3:0 "Portnamm Ideas 3"
+ A19_ideas_3_start:0 "Portnamm Traditions 3"
+ A19_ideas_3_bonus:0 "Portnamm Ambition 3"
  A19_idea_1_3:0 "Sponsor Adventurer Explorers"
  A19_idea_1_3_desc:0 "Portnamm 1 desc"
  A19_idea_2_3:0 "Pioneers Of Artificery"
@@ -3728,3 +3707,244 @@
  B50_idea_6_3_desc:0 "Newshire 6 desc"
  B50_idea_7_3:0 "Giveth to Halann, and Halann Giveth Back"
  B50_idea_7_3_desc:0 "Newshire 7 desc"
+
+
+  ##### ESMARIA #####
+
+ Z46_ideas_3:0 "Esmaria Ideas 3"
+ Z46_ideas_3_start:0 "Esmaria Traditions 3"
+ Z46_ideas_3_bonus:0 "Esmaria Ambition 3"
+ Z46_idea_1_3:0 "Warring Nobles"
+ Z46_idea_1_3_desc:0 "Esmaria 1 desc"
+ Z46_idea_2_3:0 "Know Everyone"
+ Z46_idea_2_3_desc:0 "Esmaria 2 desc"
+ Z46_idea_3_3:0 "United at Last"
+ Z46_idea_3_3_desc:0 "Esmaria 3 desc"
+ Z46_idea_4_3:0 "Land of Rivers and Forests"
+ Z46_idea_4_3_desc:0 "Esmaria 4 desc"
+ Z46_idea_5_3:0 "Coastal Protection Act"
+ Z46_idea_5_3_desc:0 "Esmaria 5 desc"
+ Z46_idea_6_3:0 "Light On Our Feet"
+ Z46_idea_6_3_desc:0 "Esmaria 6 desc"
+ Z46_idea_7_3:0 "Council of Esmaria"
+ Z46_idea_7_3_desc:0 "Esmaria 7 desc" 
+
+
+ A35_ideas_1:0 "Konwell Ideas 1"
+ A35_ideas_1_start:0 "Konwell Traditions 1"
+ A35_ideas_1_bonus:0 "Konwell Ambition 1"
+ A35_idea_1_1:0 "Imperial Archives"
+ A35_idea_1_1_desc:0 "Konwell 1 desc"
+ A35_idea_2_1:0 "Know Everyone"
+ A35_idea_2_1_desc:0 "Konwell 2 desc"
+ A35_idea_3_1:0 "History is written by the Victors"
+ A35_idea_3_1_desc:0 "Konwell 3 desc"
+ A35_idea_4_1:0 "Land of Rivers and Forests"
+ A35_idea_4_1_desc:0 "Konwell 4 desc"
+ A35_idea_5_1:0 "Economical Theorem"
+ A35_idea_5_1_desc:0 "Konwell 5 desc"
+ A35_idea_6_1:0 "Light On Our Feet"
+ A35_idea_6_1_desc:0 "Konwell 6 desc"
+ A35_idea_7_1:0 "Millsbayer Bombards"
+ A35_idea_7_1_desc:0 "Konwell 7 desc" 
+
+ A35_ideas_2:0 "Konwell Ideas 2"
+ A35_ideas_2_start:0 "Konwell Traditions 2"
+ A35_ideas_2_bonus:0 "Konwell Ambition 2"
+ A35_idea_1_2:0 "Imperial Archives"
+ A35_idea_1_2_desc:0 "Konwell 1 desc"
+ A35_idea_2_2:0 "Know Everyone"
+ A35_idea_2_2_desc:0 "Konwell 2 desc"
+ A35_idea_3_2:0 "History is written by the Victors"
+ A35_idea_3_2_desc:0 "Konwell 3 desc"
+ A35_idea_4_2:0 "Land of Rivers and Forests"
+ A35_idea_4_2_desc:0 "Konwell 4 desc"
+ A35_idea_5_2:0 "Economical Theorem"
+ A35_idea_5_2_desc:0 "Konwell 5 desc"
+ A35_idea_6_2:0 "Light On Our Feet"
+ A35_idea_6_2_desc:0 "Konwell 6 desc"
+ A35_idea_7_2:0 "Millsbayer Bombards"
+ A35_idea_7_2_desc:0 "Konwell 7 desc" 
+
+ A35_ideas_3:0 "Konwell Ideas 3"
+ A35_ideas_3_start:0 "Konwell Traditions 3"
+ A35_ideas_3_bonus:0 "Konwell Ambition 3"
+ A35_idea_1_3:0 "Imperial Archives"
+ A35_idea_1_3_desc:0 "Konwell 1 desc"
+ A35_idea_2_3:0 "Know Everyone"
+ A35_idea_2_3_desc:0 "Konwell 2 desc"
+ A35_idea_3_3:0 "History is written by the Victors"
+ A35_idea_3_3_desc:0 "Konwell 3 desc"
+ A35_idea_4_3:0 "Land of Rivers and Forests"
+ A35_idea_4_3_desc:0 "Konwell 4 desc"
+ A35_idea_5_3:0 "Economical Theorem"
+ A35_idea_5_3_desc:0 "Konwell 5 desc"
+ A35_idea_6_3:0 "Light On Our Feet"
+ A35_idea_6_3_desc:0 "Konwell 6 desc"
+ A35_idea_7_3:0 "Millsbayer Bombards"
+ A35_idea_7_3_desc:0 "Konwell 7 desc"
+
+
+ A37_ideas_1:0 "Terr Ideas 1"
+ A37_ideas_1_start:0 "Terr Traditions 1"
+ A37_ideas_1_bonus:0 "Terr Ambition 1"
+ A37_idea_1_1:0 "House of Terr"
+ A37_idea_1_1_desc:0 "Terr 1 desc"
+ A37_idea_2_1:0 "Know Everyone"
+ A37_idea_2_1_desc:0 "Terr 2 desc"
+ A37_idea_3_1:0 "Lady's Eagles"
+ A37_idea_3_1_desc:0 "Terr 3 desc"
+ A37_idea_4_1:0 "Land of Rivers and Forests"
+ A37_idea_4_1_desc:0 "Terr 4 desc"
+ A37_idea_5_1:0 "Untangling Laws"
+ A37_idea_5_1_desc:0 "Terr 5 desc"
+ A37_idea_6_1:0 "Light On Our Feet"
+ A37_idea_6_1_desc:0 "Terr 6 desc"
+ A37_idea_7_1:0 "Resplendent at Last!"
+ A37_idea_7_1_desc:0 "Terr 7 desc"  
+
+ A37_ideas_2:0 "Terr Ideas 2"
+ A37_ideas_2_start:0 "Terr Traditions 2"
+ A37_ideas_2_bonus:0 "Terr Ambition 2"
+ A37_idea_1_2:0 "House of Terr"
+ A37_idea_1_2_desc:0 "Terr 1 desc"
+ A37_idea_2_2:0 "Know Everyone"
+ A37_idea_2_2_desc:0 "Terr 2 desc"
+ A37_idea_3_2:0 "Lady's Eagles"
+ A37_idea_3_2_desc:0 "Terr 3 desc"
+ A37_idea_4_2:0 "Land of Rivers and Forests"
+ A37_idea_4_2_desc:0 "Terr 4 desc"
+ A37_idea_5_2:0 "Untangling Laws"
+ A37_idea_5_2_desc:0 "Terr 5 desc"
+ A37_idea_6_2:0 "Light On Our Feet"
+ A37_idea_6_2_desc:0 "Terr 6 desc"
+ A37_idea_7_2:0 "Resplendent at Last!"
+ A37_idea_7_2_desc:0 "Terr 7 desc"  
+
+ A37_ideas_3:0 "Terr Ideas 3"
+ A37_ideas_3_start:0 "Terr Traditions 3"
+ A37_ideas_3_bonus:0 "Terr Ambition 3"
+ A37_idea_1_3:0 "House of Terr"
+ A37_idea_1_3_desc:0 "Terr 1 desc"
+ A37_idea_2_3:0 "Know Everyone"
+ A37_idea_2_3_desc:0 "Terr 2 desc"
+ A37_idea_3_3:0 "Lady's Eagles"
+ A37_idea_3_3_desc:0 "Terr 3 desc"
+ A37_idea_4_3:0 "Land of Rivers and Forests"
+ A37_idea_4_3_desc:0 "Terr 4 desc"
+ A37_idea_5_3:0 "Untangling Laws"
+ A37_idea_5_3_desc:0 "Terr 5 desc"
+ A37_idea_6_3:0 "Light On Our Feet"
+ A37_idea_6_3_desc:0 "Terr 6 desc"
+ A37_idea_7_3:0 "Resplendent at Last!"
+ A37_idea_7_3_desc:0 "Terr 7 desc"
+
+
+ A93_ideas_1:0 "Estallen Ideas 1"
+ A93_ideas_1_start:0 "Estallen Traditions 1"
+ A93_ideas_1_bonus:0 "Estallen Ambition 1"
+ A93_idea_1_1:0 "Bands of Pinklady"
+ A93_idea_1_1_desc:0 "Estallen 1 desc"
+ A93_idea_2_1:0 "Know Everyone"
+ A93_idea_2_1_desc:0 "Estallen 2 desc"
+ A93_idea_3_1:0 "Courtesan Diplomacy"
+ A93_idea_3_1_desc:0 "Estallen 3 desc"
+ A93_idea_4_1:0 "Land of Rivers and Forests"
+ A93_idea_4_1_desc:0 "Estallen 4 desc"
+ A93_idea_5_1:0 "Getting Serious"
+ A93_idea_5_1_desc:0 "Estallen 5 desc"
+ A93_idea_6_1:0 "Light On Our Feet"
+ A93_idea_6_1_desc:0 "Estallen 6 desc"
+ A93_idea_7_1:0 "Camp Followers"
+ A93_idea_7_1_desc:0 "Estallen 7 desc" 
+
+ A93_ideas_2:0 "Estallen Ideas 2"
+ A93_ideas_2_start:0 "Estallen Traditions 2"
+ A93_ideas_2_bonus:0 "Estallen Ambition 2"
+ A93_idea_1_2:0 "Bands of Pinklady"
+ A93_idea_1_2_desc:0 "Estallen 1 desc"
+ A93_idea_2_2:0 "Know Everyone"
+ A93_idea_2_2_desc:0 "Estallen 2 desc"
+ A93_idea_3_2:0 "Courtesan Diplomacy"
+ A93_idea_3_2_desc:0 "Estallen 3 desc"
+ A93_idea_4_2:0 "Land of Rivers and Forests"
+ A93_idea_4_2_desc:0 "Estallen 4 desc"
+ A93_idea_5_2:0 "Getting Serious"
+ A93_idea_5_2_desc:0 "Estallen 5 desc"
+ A93_idea_6_2:0 "Light On Our Feet"
+ A93_idea_6_2_desc:0 "Estallen 6 desc"
+ A93_idea_7_2:0 "Camp Followers"
+ A93_idea_7_2_desc:0 "Estallen 7 desc" 
+
+ A93_ideas_3:0 "Estallen Ideas 3"
+ A93_ideas_3_start:0 "Estallen Traditions 3"
+ A93_ideas_3_bonus:0 "Estallen Ambition 3"
+ A93_idea_1_3:0 "Bands of Pinklady"
+ A93_idea_1_3_desc:0 "Estallen 1 desc"
+ A93_idea_2_3:0 "Know Everyone"
+ A93_idea_2_3_desc:0 "Estallen 2 desc"
+ A93_idea_3_3:0 "Courtesan Diplomacy"
+ A93_idea_3_3_desc:0 "Estallen 3 desc"
+ A93_idea_4_3:0 "Land of Rivers and Forests"
+ A93_idea_4_3_desc:0 "Estallen 4 desc"
+ A93_idea_5_3:0 "Getting Serious"
+ A93_idea_5_3_desc:0 "Estallen 5 desc"
+ A93_idea_6_3:0 "Light On Our Feet"
+ A93_idea_6_3_desc:0 "Estallen 6 desc"
+ A93_idea_7_3:0 "Camp Followers"
+ A93_idea_7_3_desc:0 "Estallen 7 desc"
+
+
+ A92_ideas_1:0 "Leslinpar Ideas 1"
+ A92_ideas_1_start:0 "Leslinpar Traditions 1"
+ A92_ideas_1_bonus:0 "Leslinpar Ambition 1"
+ A92_idea_1_1:0 "Parian Elvish"
+ A92_idea_1_1_desc:0 "Leslinpar 1 desc"
+ A92_idea_2_1:0 "Know Everyone"
+ A92_idea_2_1_desc:0 "Leslinpar 2 desc"
+ A92_idea_3_1:0 "Qathaine"
+ A92_idea_3_1_desc:0 "Leslinpar 3 desc"
+ A92_idea_4_1:0 "Land of Rivers and Forests"
+ A92_idea_4_1_desc:0 "Leslinpar 4 desc"
+ A92_idea_5_1:0 "Patriotic Drive"
+ A92_idea_5_1_desc:0 "Leslinpar 5 desc"
+ A92_idea_6_1:0 "Light On Our Feet"
+ A92_idea_6_1_desc:0 "Leslinpar 6 desc"
+ A92_idea_7_1:0 "Rally, Forward!"
+ A92_idea_7_1_desc:0 "Leslinpar 7 desc" 
+
+ A92_ideas_2:0 "Leslinpar Ideas 2"
+ A92_ideas_2_start:0 "Leslinpar Traditions 2"
+ A92_ideas_2_bonus:0 "Leslinpar Ambition 2"
+ A92_idea_1_2:0 "Parian Elvish"
+ A92_idea_1_2_desc:0 "Leslinpar 1 desc"
+ A92_idea_2_2:0 "Know Everyone"
+ A92_idea_2_2_desc:0 "Leslinpar 2 desc"
+ A92_idea_3_2:0 "Qathaine"
+ A92_idea_3_2_desc:0 "Leslinpar 3 desc"
+ A92_idea_4_2:0 "Land of Rivers and Forests"
+ A92_idea_4_2_desc:0 "Leslinpar 4 desc"
+ A92_idea_5_2:0 "Patriotic Drive"
+ A92_idea_5_2_desc:0 "Leslinpar 5 desc"
+ A92_idea_6_2:0 "Light On Our Feet"
+ A92_idea_6_2_desc:0 "Leslinpar 6 desc"
+ A92_idea_7_2:0 "Rally, Forward!"
+ A92_idea_7_2_desc:0 "Leslinpar 7 desc" 
+
+ A92_ideas_3:0 "Leslinpar Ideas 3"
+ A92_ideas_3_start:0 "Leslinpar Traditions 3"
+ A92_ideas_3_bonus:0 "Leslinpar Ambition 3"
+ A92_idea_1_3:0 "Parian Elvish"
+ A92_idea_1_3_desc:0 "Leslinpar 1 desc"
+ A92_idea_2_3:0 "Know Everyone"
+ A92_idea_2_3_desc:0 "Leslinpar 2 desc"
+ A92_idea_3_3:0 "Qathaine"
+ A92_idea_3_3_desc:0 "Leslinpar 3 desc"
+ A92_idea_4_3:0 "Land of Rivers and Forests"
+ A92_idea_4_3_desc:0 "Leslinpar 4 desc"
+ A92_idea_5_3:0 "Patriotic Drive"
+ A92_idea_5_3_desc:0 "Leslinpar 5 desc"
+ A92_idea_6_3:0 "Light On Our Feet"
+ A92_idea_6_3_desc:0 "Leslinpar 6 desc"
+ A92_idea_7_3:0 "Rally, Forward!"
+ A92_idea_7_3_desc:0 "Leslinpar 7 desc" 
