Esmaria part idk

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -3948,3 +3948,223 @@
  A92_idea_6_3_desc:0 "Leslinpar 6 desc"
  A92_idea_7_3:0 "Rally, Forward!"
  A92_idea_7_3_desc:0 "Leslinpar 7 desc" 
+
+
+ A62_ideas_1:0 "Telgeir Ideas 1"
+ A62_ideas_1_start:0 "Telgeir Traditions 1"
+ A62_ideas_1_bonus:0 "Telgeir Ambition 1"
+ A62_idea_1_1:0 "Eyes Cast North"
+ A62_idea_1_1_desc:0 "Telgeir 1 desc"
+ A62_idea_2_1:0 "Know Everyone"
+ A62_idea_2_1_desc:0 "Telgeir 2 desc"
+ A62_idea_3_1:0 "Reaver-Marines"
+ A62_idea_3_1_desc:0 "Telgeir 3 desc"
+ A62_idea_4_1:0 "Land of Rivers and Forests"
+ A62_idea_4_1_desc:0 "Telgeir 4 desc"
+ A62_idea_5_1:0 "Gerudian Influences"
+ A62_idea_5_1_desc:0 "Telgeir 5 desc"
+ A62_idea_6_1:0 "Light On Our Feet"
+ A62_idea_6_1_desc:0 "Telgeir 6 desc"
+ A62_idea_7_1:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A62_idea_7_1_desc:0 "Telgeir 7 desc"
+
+ A62_ideas_2:0 "Telgeir Ideas 2"
+ A62_ideas_2_start:0 "Telgeir Traditions 2"
+ A62_ideas_2_bonus:0 "Telgeir Ambition 2"
+ A62_idea_1_2:0 "Eyes Cast North"
+ A62_idea_1_2_desc:0 "Telgeir 1 desc"
+ A62_idea_2_2:0 "Know Everyone"
+ A62_idea_2_2_desc:0 "Telgeir 2 desc"
+ A62_idea_3_2:0 "Reaver-Marines"
+ A62_idea_3_2_desc:0 "Telgeir 3 desc"
+ A62_idea_4_2:0 "Land of Rivers and Forests"
+ A62_idea_4_2_desc:0 "Telgeir 4 desc"
+ A62_idea_5_2:0 "Gerudian Influences"
+ A62_idea_5_2_desc:0 "Telgeir 5 desc"
+ A62_idea_6_2:0 "Light On Our Feet"
+ A62_idea_6_2_desc:0 "Telgeir 6 desc"
+ A62_idea_7_2:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A62_idea_7_2_desc:0 "Telgeir 7 desc"
+
+ A62_ideas_3:0 "Telgeir Ideas 3"
+ A62_ideas_3_start:0 "Telgeir Traditions 3"
+ A62_ideas_3_bonus:0 "Telgeir Ambition 3"
+ A62_idea_1_3:0 "Eyes Cast North"
+ A62_idea_1_3_desc:0 "Telgeir 1 desc"
+ A62_idea_2_3:0 "Know Everyone"
+ A62_idea_2_3_desc:0 "Telgeir 2 desc"
+ A62_idea_3_3:0 "Reaver-Marines"
+ A62_idea_3_3_desc:0 "Telgeir 3 desc"
+ A62_idea_4_3:0 "Land of Rivers and Forests"
+ A62_idea_4_3_desc:0 "Telgeir 4 desc"
+ A62_idea_5_3:0 "Gerudian Influences"
+ A62_idea_5_3_desc:0 "Telgeir 5 desc"
+ A62_idea_6_3:0 "Light On Our Feet"
+ A62_idea_6_3_desc:0 "Telgeir 6 desc"
+ A62_idea_7_3:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A62_idea_7_3_desc:0 "Telgeir 7 desc"
+
+
+ A95_ideas_1:0 "Themarenn Ideas 1"
+ A95_ideas_1_start:0 "Themarenn Traditions 1"
+ A95_ideas_1_bonus:0 "Themarenn Ambition 1"
+ A95_idea_1_1:0 "Our Gilded Cage"
+ A95_idea_1_1_desc:0 "Themarenn 1 desc"
+ A95_idea_2_1:0 "Know Everyone"
+ A95_idea_2_1_desc:0 "Themarenn 2 desc"
+ A95_idea_3_1:0 "Reaver-Marines"
+ A95_idea_3_1_desc:0 "Themarenn 3 desc"
+ A95_idea_4_1:0 "Land of Rivers and Forests"
+ A95_idea_4_1_desc:0 "Themarenn 4 desc"
+ A95_idea_5_1:0 "Gerudian Influences"
+ A95_idea_5_1_desc:0 "Themarenn 5 desc"
+ A95_idea_6_1:0 "Light On Our Feet"
+ A95_idea_6_1_desc:0 "Themarenn 6 desc"
+ A95_idea_7_1:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A95_idea_7_1_desc:0 "Themarenn 7 desc"
+
+ A95_ideas_2:0 "Themarenn Ideas 2"
+ A95_ideas_2_start:0 "Themarenn Traditions 2"
+ A95_ideas_2_bonus:0 "Themarenn Ambition 2"
+ A95_idea_1_2:0 "Our Gilded Cage"
+ A95_idea_1_2_desc:0 "Themarenn 1 desc"
+ A95_idea_2_2:0 "Know Everyone"
+ A95_idea_2_2_desc:0 "Themarenn 2 desc"
+ A95_idea_3_2:0 "Reaver-Marines"
+ A95_idea_3_2_desc:0 "Themarenn 3 desc"
+ A95_idea_4_2:0 "Land of Rivers and Forests"
+ A95_idea_4_2_desc:0 "Themarenn 4 desc"
+ A95_idea_5_2:0 "Gerudian Influences"
+ A95_idea_5_2_desc:0 "Themarenn 5 desc"
+ A95_idea_6_2:0 "Light On Our Feet"
+ A95_idea_6_2_desc:0 "Themarenn 6 desc"
+ A95_idea_7_2:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A95_idea_7_2_desc:0 "Themarenn 7 desc"
+
+ A95_ideas_3:0 "Themarenn Ideas 3"
+ A95_ideas_3_start:0 "Themarenn Traditions 3"
+ A95_ideas_3_bonus:0 "Themarenn Ambition 3"
+ A95_idea_1_3:0 "Our Gilded Cage"
+ A95_idea_1_3_desc:0 "Themarenn 1 desc"
+ A95_idea_2_3:0 "Know Everyone"
+ A95_idea_2_3_desc:0 "Themarenn 2 desc"
+ A95_idea_3_3:0 "Reaver-Marines"
+ A95_idea_3_3_desc:0 "Themarenn 3 desc"
+ A95_idea_4_3:0 "Land of Rivers and Forests"
+ A95_idea_4_3_desc:0 "Themarenn 4 desc"
+ A95_idea_5_3:0 "Gerudian Influences"
+ A95_idea_5_3_desc:0 "Themarenn 5 desc"
+ A95_idea_6_3:0 "Light On Our Feet"
+ A95_idea_6_3_desc:0 "Themarenn 6 desc"
+ A95_idea_7_3:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A95_idea_7_3_desc:0 "Themarenn 7 desc"
+
+
+ A94_ideas_1:0 "Gabmorionn Ideas 1"
+ A94_ideas_1_start:0 "Gabmorionn Traditions 1"
+ A94_ideas_1_bonus:0 "Gabmorionn Ambition 1"
+ A94_idea_1_1:0 "All the Countess children"
+ A94_idea_1_1_desc:0 "Gabmorionn 1 desc"
+ A94_idea_2_1:0 "Know Everyone"
+ A94_idea_2_1_desc:0 "Gabmorionn 2 desc"
+ A94_idea_3_1:0 "Reaver-Marines"
+ A94_idea_3_1_desc:0 "Gabmorionn 3 desc"
+ A94_idea_4_1:0 "Land of Rivers and Forests"
+ A94_idea_4_1_desc:0 "Gabmorionn 4 desc"
+ A94_idea_5_1:0 "Gerudian Influences"
+ A94_idea_5_1_desc:0 "Gabmorionn 5 desc"
+ A94_idea_6_1:0 "Light On Our Feet"
+ A94_idea_6_1_desc:0 "Gabmorionn 6 desc"
+ A94_idea_7_1:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A94_idea_7_1_desc:0 "Gabmorionn 7 desc"
+
+ A94_ideas_2:0 "Gabmorionn Ideas 2"
+ A94_ideas_2_start:0 "Gabmorionn Traditions 2"
+ A94_ideas_2_bonus:0 "Gabmorionn Ambition 2"
+ A94_idea_1_2:0 "All the Countess children"
+ A94_idea_1_2_desc:0 "Gabmorionn 1 desc"
+ A94_idea_2_2:0 "Know Everyone"
+ A94_idea_2_2_desc:0 "Gabmorionn 2 desc"
+ A94_idea_3_2:0 "Reaver-Marines"
+ A94_idea_3_2_desc:0 "Gabmorionn 3 desc"
+ A94_idea_4_2:0 "Land of Rivers and Forests"
+ A94_idea_4_2_desc:0 "Gabmorionn 4 desc"
+ A94_idea_5_2:0 "Gerudian Influences"
+ A94_idea_5_2_desc:0 "Gabmorionn 5 desc"
+ A94_idea_6_2:0 "Light On Our Feet"
+ A94_idea_6_2_desc:0 "Gabmorionn 6 desc"
+ A94_idea_7_2:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A94_idea_7_2_desc:0 "Gabmorionn 7 desc"
+
+ A94_ideas_3:0 "Gabmorionn Ideas 3"
+ A94_ideas_3_start:0 "Gabmorionn Traditions 3"
+ A94_ideas_3_bonus:0 "Gabmorionn Ambition 3"
+ A94_idea_1_3:0 "All the Countess children"
+ A94_idea_1_3_desc:0 "Gabmorionn 1 desc"
+ A94_idea_2_3:0 "Know Everyone"
+ A94_idea_2_3_desc:0 "Gabmorionn 2 desc"
+ A94_idea_3_3:0 "Reaver-Marines"
+ A94_idea_3_3_desc:0 "Gabmorionn 3 desc"
+ A94_idea_4_3:0 "Land of Rivers and Forests"
+ A94_idea_4_3_desc:0 "Gabmorionn 4 desc"
+ A94_idea_5_3:0 "Gerudian Influences"
+ A94_idea_5_3_desc:0 "Gabmorionn 5 desc"
+ A94_idea_6_3:0 "Light On Our Feet"
+ A94_idea_6_3_desc:0 "Gabmorionn 6 desc"
+ A94_idea_7_3:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A94_idea_7_3_desc:0 "Gabmorionn 7 desc"
+
+
+ A44_ideas_1:0 "Esmaraine Ideas 1"
+ A44_ideas_1_start:0 "Esmaraine Traditions 1"
+ A44_ideas_1_bonus:0 "Esmaraine Ambition 1"
+ A44_idea_1_1:0 "Endeavour for Esmaria"
+ A44_idea_1_1_desc:0 "Esmaraine 1 desc"
+ A44_idea_2_1:0 "Know Everyone"
+ A44_idea_2_1_desc:0 "Esmaraine 2 desc"
+ A44_idea_3_1:0 "Reaver-Marines"
+ A44_idea_3_1_desc:0 "Esmaraine 3 desc"
+ A44_idea_4_1:0 "Land of Rivers and Forests"
+ A44_idea_4_1_desc:0 "Esmaraine 4 desc"
+ A44_idea_5_1:0 "Gerudian Influences"
+ A44_idea_5_1_desc:0 "Esmaraine 5 desc"
+ A44_idea_6_1:0 "Light On Our Feet"
+ A44_idea_6_1_desc:0 "Esmaraine 6 desc"
+ A44_idea_7_1:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A44_idea_7_1_desc:0 "Esmaraine 7 desc"
+
+ A44_ideas_2:0 "Esmaraine Ideas 2"
+ A44_ideas_2_start:0 "Esmaraine Traditions 2"
+ A44_ideas_2_bonus:0 "Esmaraine Ambition 2"
+ A44_idea_1_2:0 "Endeavour for Esmaria"
+ A44_idea_1_2_desc:0 "Esmaraine 1 desc"
+ A44_idea_2_2:0 "Know Everyone"
+ A44_idea_2_2_desc:0 "Esmaraine 2 desc"
+ A44_idea_3_2:0 "Reaver-Marines"
+ A44_idea_3_2_desc:0 "Esmaraine 3 desc"
+ A44_idea_4_2:0 "Land of Rivers and Forests"
+ A44_idea_4_2_desc:0 "Esmaraine 4 desc"
+ A44_idea_5_2:0 "Gerudian Influences"
+ A44_idea_5_2_desc:0 "Esmaraine 5 desc"
+ A44_idea_6_2:0 "Light On Our Feet"
+ A44_idea_6_2_desc:0 "Esmaraine 6 desc"
+ A44_idea_7_2:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A44_idea_7_2_desc:0 "Esmaraine 7 desc"
+
+ A44_ideas_3:0 "Esmaraine Ideas 3"
+ A44_ideas_3_start:0 "Esmaraine Traditions 3"
+ A44_ideas_3_bonus:0 "Esmaraine Ambition 3"
+ A44_idea_1_3:0 "Endeavour for Esmaria"
+ A44_idea_1_3_desc:0 "Esmaraine 1 desc"
+ A44_idea_2_3:0 "Know Everyone"
+ A44_idea_2_3_desc:0 "Esmaraine 2 desc"
+ A44_idea_3_3:0 "Reaver-Marines"
+ A44_idea_3_3_desc:0 "Esmaraine 3 desc"
+ A44_idea_4_3:0 "Land of Rivers and Forests"
+ A44_idea_4_3_desc:0 "Esmaraine 4 desc"
+ A44_idea_5_3:0 "Gerudian Influences"
+ A44_idea_5_3_desc:0 "Esmaraine 5 desc"
+ A44_idea_6_3:0 "Light On Our Feet"
+ A44_idea_6_3_desc:0 "Esmaraine 6 desc"
+ A44_idea_7_3:0 "Silver Cities, Serene Lakes, Golden Palaces"
+ A44_idea_7_3_desc:0 "Esmaraine 7 desc"
