Turn ruler into powerful general
Also remove Leslinpar buff to mythical cav when losing the idea

--- a/localisation/cot_ideas_l_english.yml
+++ b/localisation/cot_ideas_l_english.yml
@@ -569,6 +569,10 @@
  mil8_6_a_desc:0 ""
  mil8_7_a:0 "Field Commanders"
  mil8_7_a_desc:0 "With all other steps done, our officers finally take command of the entire field, utilizing their knowledge of terrain, tactics, and their men to organize battles to their favor and thereby grasp victory." 
+ 
+ ruler_to_powerful_general_title:0 "Turn ruler into a powerful general"
+ ruler_to_powerful_general_desc:0 "He will have same stats as war wizzard would have"
+ ruler_to_powerful_general_tt: "§JTurn ruler into a powerful general§!"
  ##### ADVENTURER IDEAS #####
  
  mil9:0 "Adventurer Ideas"
