Idea bump for T1 vassals of T3 overlords
Also minor formable fixes

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -81,3 +81,6 @@
  cot_misc_events.3.a: "We shall follow Korgus, one last time!"
  korgus_event_tooltip_1:0 "§GAll of our technologies are increased to 3!§!\n"
  korgus_event_tooltip_2:0 "§GWe gain subjugation casus belli on all orcs in Escann! All will kneel before Korgus!§!\n"
+
+ bump_vassal_ideas_title:0 "Bump ideas of your vassals"
+ petition_overlord_for_ideas_bump_title:0 "Bump ideas thanks to Tier 3 liege"
