Konwell Becoming Based Pt 5

--- a/localisation/Flavour_Konwell_A35_l_english.yml
+++ b/localisation/Flavour_Konwell_A35_l_english.yml
@@ -159,3 +159,115 @@
  konwell.15.t:0 "Magical Treatise Finished"
  konwell.15.d:0 "’...inscribed, [Root.Monarch.GetName], sovereign of the [Root.GovernmentName] of Konwell of the year [GetYear].’\n\nAfter a final flourish of [Root.Monarch.GetHerHis] quill, [Root.Monarch.GetName] relaxed [Root.Monarch.GetHerHis] cramped hand and sat back in the straight-backed chair that had become [Root.Monarch.GetHerHis] closest companion over the years. It had taken two years and a minor neglect of rule, but the Konwellian Treatise on Magical Study was finally complete. \n\nThe result of not only long years of concentrated writing but also decades of magical study and contemplation whilst ruling and discussions with many of the Institute’s greatest scholars, the Treatise is an attempt at codifying the legendary wizard’s experience into an authoritative work for future generations to use. Magic is highly skill dependent and fickle at the best of times, but it is [Root.Monarch.GetName]’s hope that his work will help students of all skills pierce its veil and reach their fullest potential a little more easily.\n\nTime will tell whether the Treatise eventually fades into oblivion in a forgotten corner of the Archives."
  konwell.15.a:0 "Now, for a well deserved rest."
+
+
+##### COT KONWELL ######
+
+# Tooltips
+ konwell_cot_escann_tt:0 "Enables a diplomatic action allowing us to offer sale of legitimacy-enhancing documents from the 'Imperial Archive' to those of proper faith, for a modicum return of diplomatic support."
+ konwell_cot_gerudia_tt:0 "Enables a diplomatic action allowing us to offer sale of our institutional knowledge. §YThis functions as 'Knowledge Sharing' but takes twice as long§!, but that just gives us twice the profit!"
+ konwell_cot_kobold_tt:0 "Enables a diplomatic action allowing us to offload some of the 'tall-gnomes' family on others. Supposedly they are architectural experts, which we could use to full effect!"
+
+# Missions
+ konwell_cot_escann_title:0 "New Escann Lore"
+ konwell_cot_escann_desc:0 "Some claim victors write the history books. In a way, this is correct, but the real truth is that it is us historians, bards, and archivists who write the books. With all the changes which have come to escann, it is clear we are in a position to stand as the forefront writers of history. By journeying to Escann and collecting firsthand accounts we can ensure all knowledge is captured accurately. We've also received commission to bring archival proof of past claims to certain bits of land - such requests affirm our status as the masters of the archives and is certain to support the legitimacy of many would-be nation builders."
+ konwell_cot_gerudia_title:0 "Northern Sagas"
+ konwell_cot_gerudia_desc:0 "The North is a strange, near-savage land of many races which holds tantalizing heroic legends captured by their unique warrior-bards (called 'skalds'). Our reports also indicate that there is a thirst for institutional knowledge in the north that we could readily supply... for a price, of course."
+ konwell_cot_dragoncoast_title:0 "Dragoncoast Dogmas"
+ konwell_cot_dragoncoast_desc:0 "Many of our esteemed gnomish professors have families hailing from the so-called 'Dragon Coast'. While it seems highly unlikely any true dragons reside in the region, our recent ventures have placed us in a position to visit and study the strange philosophies and tendencies of that bleak land's inhabitants. Curiously, the most recent report from our ambassador in the region indicated a unusually tall gnome in a trenchcoat has offered his services at the archive for a premium. His only request was that we 'git tem from der ssssoon' and let his supposedly quite large extended family take up residence in our lands."
+ konwell_cot_elves_title:0 "Elvish Home-songs"
+ konwell_cot_elves_desc:0 "On our return voyages from the Dragon-coast, we met multiple times with Lorentish and Elvish sailors claiming to be returning from the west. Notably among these was an old sea elf who operated an inn in Venail. All talked of some mythical elvish homeland, rich in resources and artifacts but scarce in population and treacherous for the unwary. We had originally believed these sailor's tales to be apocryphal until the afore-mentioned salt-worn elf, whom was called "Luna Seafair" produced some charts and offered to set off with us as long as we paid off her extensive debts. The accuracy of the maps were astounding, and the debts little in the grand scheme of our great nation's history. As such, we have already hired an adventurer and gathered supplies for this new journey, awaiting only confirmation from the Archive."
+ konwell_cot_dotim_title:0 "Dotim Erection"
+ konwell_cot_dotim_desc:0 "At long last the voyages to the far west have begun returning with artifacts and notes of enormous import. Most astounding is the realization that there are indeed still living remnants of once-great civilizations in those far shores, populated by a queer race of near-elves. Some are savages who worship Nerat through barbaric sacrificial rituals like old alenics would, but others have a rich history which they record, in part, through ritualistic carved poles that they dedicate to the spirits they claim inhabit the land. A new expedition is requested from the Archives with sculpting and linguistic experts who can come and study these great shafts of wood so that we might erect a pole of our own for research purposes. Anecdotal note: For some reason our crew chuckle whenever erecting poles is mentioned, this requires further investigation."
+ konwell_cot_ruinborn_title:0 "Those Ruin-Born"
+ konwell_cot_ruinborn_desc:0 "Konwellka! We've discovered incredible secrets during out investigations and expiditions here in this old-world, not least of which is that these ruin-born creatures are indeed elves whom have somehow evolved (or indeed, devolved) over the untold ages since the Day of Ashen Skies. There are so many artifacts and pieces of material knowledge that we are unsure our ship can fit them all. Though it come at a steep price, please ensure sufficient space and resources are prepared that we might collect and study these in a new Archive-administered facility in Cannor."
+ konwell_cot_khet_title:0 "To Khetist Shores"
+ konwell_cot_khet_desc:0 "As our southern expeditionary force sets out the first stop is the mighty city of Koroshesh, gateway to Khetist lands. A large number of gnomes make this city home and eagerly engage with our Archivists. With the proper amount of diplomatic and financial leverage it seems likely we can not only purchase maps and records of the interior of this land, but also secure beneficial grain imports from the delta's surplus."
+ konwell_cot_fanguala_title:0 "Fangualan Cape"
+ konwell_cot_fanguala_desc:0 ""
+ konwell_cot_halfling_title:0 "Halfling Cookbooks"
+ konwell_cot_halfling_desc:0 ""
+ konwell_cot_baashedi_title:0 "Mermaid Seas"
+ konwell_cot_baashedi_desc:0 ""
+ konwell_cot_ringlet_title:0 "Ringlet Dive"
+ konwell_cot_ringlet_desc:0 ""
+ konwell_cot_arawkelin_title:0 "Arawkelin Coast"
+ konwell_cot_arawkelin_desc:0 ""
+ konwell_cot_tianlou_title:0 "Eastern Seat of Civilization"
+ konwell_cot_tianlou_desc:0 ""
+ konwell_cot_daengun_title:0 "The Archive at World's End"
+ konwell_cot_daengun_desc:0 ""
+ konwell_cot_deepwoods_exploration_title:0 "Deepwoods Exploration"
+ konwell_cot_deepwoods_exploration_desc:0 ""
+ konwell_cot_bahar_title:0 "Aqatbar Librarians"
+ konwell_cot_bahar_desc:0 ""
+ konwell_cot_harpies_title:0 "Secrets of the Roosts"
+ konwell_cot_harpies_desc:0 ""
+ konwell_cot_bulwar_title:0 "Entrepot of Humanity"
+ konwell_cot_bulwar_desc:0 ""
+ konwell_cot_jadd_title:0 "Wisdom of Dervishes"
+ konwell_cot_jadd_desc:0 ""
+ konwell_cot_rahen_title:0 "Raheni Philosophies"
+ konwell_cot_rahen_desc:0 ""
+ konwell_cot_hobgob_title:0 "Epics of the Frontier"
+ konwell_cot_hobgob_desc:0 ""
+ konwell_cot_oni_title:0 "The Forbidden Archive"
+ konwell_cot_oni_desc:0 ""
+ 
+# Events
+ konwell.17.t:0 "While in Bulwar..."
+ konwell.17.d:0 "While it is true this city holds a great richness in knowledge and folk lore, it is hard to miss all the other great riches as well. Luxuries which sell for premium prices in the markets of Cannor can be bought and sold for a mere fraction of the price here, and the slave markets teem with the able-bodied, most strikingly including well-muscled and strictly disciplined gnolls - reputedly indefatigible workers. The primary mission of the Archivists is to gather the world's knowledge, but the Archive does not run itself after all, and while you may not be traders the likelihood to turn a profit is so high perhaps a little investment to send back home with the tomes and scrolls might be in order..."
+ konwell.17.a:0 "Let's purchase only a few slaves to help tither'n'yon."
+ konwell.17.b:0 "Fill our ships with slaves and relieve our kin."
+ konwell.17.c:0 "Let's invest a modest amount."
+ konwell.17.e:0 "Spices, perfumes, silks! Buy it all!"
+ konwell.17.f:0 "Focus on what's ahead - prepare men and material for the desert."
+ konwell.19.t:0 ""
+ konwell.19.d:0 ""
+ konwell.19.a:0 ""
+ konwell.19.b:0 ""
+ konwell.20.t:0 ""
+ konwell.20.d:0 ""
+ konwell.20.a:0 ""
+ konwell.20.b:0 ""
+ konwell.21.t:0 ""
+ konwell.21.d:0 ""
+ konwell.21.a:0 ""
+ konwell.21.b:0 ""
+ konwell.22.t:0 "Organize Archival Administration"
+ konwell.22.d:0 "It is long past due for us to reorganize both the Imperial Archive and our realm as it's rightful stewards. Our recent and rapid investments into expansion has only served to highlight the inequities of our current system of governance. My liege, it is time to restructure... the only question which remains is the how."
+ konwell.22.a:0 "Focus on Preservation and Development. §RTall§!"
+ konwell.22.b:0 "Focus on Expansion and New Acquisition. §RWide§!"
+
+# Modifiers
+ konwell_cot_visitations:0 "Konwell Visitations"
+ konwell_cot_visitations_desc:0 "A delegation of Imperial Archivists from Konwell have recently arrived and departed from this place. In their wake they left a supply of 'common knowledge' and curious 'scientific instruments' from their homeland."
+ konwell_cot_great_dotim:0 "Great Konwell Dotim"
+ konwell_cot_great_dotim_desc:0 "A great Dotim in the style of the Boek peoples, dedicated to spirits, stories, and teachings of the old-world."
+ konwell_cot_expeditions_I:0 "Bards as Explorers"
+ konwell_cot_expeditions_II:0 "Busilari Mercenary Captains"
+ konwell_cot_expeditions_III:0 "Rounding the Capes"
+ konwell_cot_expeditions_IV:0 "Search for Legendary Locations"
+ konwell_cot_expedition_port:0 "Expedition Port"
+ konwell_cot_expedition_port_desc:0 "This port has been chosen by the esteemed Archivists of the Anbennarian Imperial Archive as the launching point for many of their knowledge-seeking expeditions."
+ konwell_cot_n_I:0 "The Bahari Connection"
+ konwell_cot_n_II:0 "Harpy Lessons"
+ konwell_cot_n_III:0 "Bulwari Networks"
+ konwell_cot_n_IV:0 "Stories of 100 Salahad Nights"
+ konwell_cot_n_V:0 "Sharing of Philosophies"
+ konwell_cot_n_VI:0 "Copied Hobgoblin Drill Manual"
+ konwell_cot_n_VII:0 "Compendium of Eastern Lore"
+ konwell_cot_s_I:0 "Khoroshesh Grain Factors"
+ konwell_cot_s_II:0 "Tales of Liberty"
+ konwell_cot_s_III:0 "Halfling Cooks and Cookbooks"
+ konwell_cot_s_IV:0 "Baashedi Naval Experts"
+ konwell_cot_s_V:0 "Veteran Kelino Rifle Missionaries"
+ konwell_cot_s_VI:0 "Gifts of Eunuchs and Pet Kobolds"
+ konwell_cot_s_VII:0 "Daengun Sacred Library... Pass"
+ konwell_cot_southling_quarter:0 "Southling Quarter"
+ konwell_cot_southling_quarter_desc:0 "A bustling restaurant and wholesaler district entirely populated by the boisterous and spice-loving halflings of the South."
+ konwell_cot_forward_archive:0 "Forward Archive"
+ konwell_cot_forward_archive_desc:0 "A foreward instillation of Anbennarian Archivists, dedicated to collecting, collating, cross-referencing, and recording all knowledge as it is siphoned from the various lands of the east and prepared for the long journey west."
+ konwell_cot_archival_defenses:0 "Archival Defenses"
+ 
+# Misc
